# RenovateAgent

./: .env.example  .env.testing  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  GEMINI.md  LOCAL_TESTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  renovate.json5  requirements.txt.backup  setup.py  test-runner.sh  test.env
.github/: renovate-bot.config.js
.github/workflows/: docker-build.yml  pre-merge.yml  renovate.yml  test-suite.yml
deployment/: README.md
deployment/config/: production.env.example
deployment/scripts/: deploy-gcp.sh  monitor-gcp.sh  setup-secrets.sh
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: architecture.md  developer.md  improvements.md  plan.md  serverless.md  webhook-setup.md
scripts/: check_dashboard_update.py  find_renovate_pr.py  local_setup.py  setup_dev_environment.py  test-docker-build.sh  test_github_connection.py  test_issue_creation.py  test_polling_system.py  test_renovate_detection.py  test_renovate_pr_simulation.py  test_target_repos.py  test_webhook.py
scripts/dev/: cleanup-serverless.sh  logs.sh  shell.sh  start.sh  stop.sh  test-serverless.py  test-serverless.sh  test-with-ngrok.sh  test.sh  test_real_webhooks.py
src/renovate_agent/: __init__.py  config.py  exceptions.py  github_client.py  issue_manager.py  main.py  pr_processor.py  standalone.py  telemetry.py  webhook_listener.py
src/renovate_agent/dependency_fixer/: __init__.py  base.py  factory.py  go_mod.py  python_poetry.py  typescript_npm.py
src/renovate_agent/polling/: __init__.py  cache.py  metrics.py  orchestrator.py  rate_limiter.py  state_tracker.py
src/renovate_agent/serverless/: __init__.py  main.py
src/renovate_agent/state/: __init__.py  manager.py
tests/: __init__.py  conftest.py  test_basic.py  test_config_deployment_mode.py  test_standalone_mode.py  test_state_manager.py
